user interface design changes

--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -36,6 +36,7 @@
 @media(max-width:576px){
     .about{
         margin-left: 50px;
+        width: 130vw;
     }
     .aboutContent{
         padding: 50px;
