--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -91,11 +91,19 @@
 .send:hover{
     transform: scale(1.2);
 }
+.contact_footer{
+    margin-top: 50px;
+    background-color: #e6e2e2;
+    width: 100%;
+    height: 100px;
+    float: left;
+
+}
 
 @media(max-width:576px){
     .contact_header{
         margin-left: 50px;
-        font-size: 25px;
+        
     }
     .contact_header h1{
         font-size: 25px;
@@ -116,12 +124,16 @@
         margin-bottom: 30px;
     }
     .contact_right{
+        padding-left: 40px;
         display: grid;
         width: auto;
         justify-content: center;
         align-items: center;
 
     }
-    
+    .contact_footer{
+        margin-left: 50px;
+        width: 130vw;
+    }
 
 }
